--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.form-signin {
+.form-center {
   width: 30%;
   margin: 0 auto;
   position: absolute;
@@ -24,6 +24,36 @@
   .xs-btn-link a {
     margin: 0 25% 0 25%;
     width: 50%;
+    text-align: center;
+  }
+}
+
+.form-center-prof {
+  width: 25%;
+  margin: 0 auto;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  margin: 0 0 0 -12.5%;
+}
+
+.input-xlarge {
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .form-center-prof {
+    width: 50%;
+    margin: 0 auto;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    margin: 0 0 0 -25%;
+  }
+  .input-xlarge {
+    width: 100%;
+  }
+  h2 {
     text-align: center;
   }
 }
