--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 //REG PAGE
-.form-signin {
+.form-center {
     width: 30%;
     margin: 0 auto;
     position: absolute;
@@ -32,6 +32,36 @@
 }
 
 //PROFILE PAGE
+
+.form-center-prof{
+    width: 25%;
+    margin: 0 auto;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    margin: 0 0 0 -12.5%;
+}
+
+.input-xlarge{
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .form-center-prof {
+        width: 50%;
+        margin: 0 auto;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        margin: 0 0 0 -25%;
+    }
+    .input-xlarge{
+        width: 100%;
+    }
+    h2{
+        text-align: center  ;
+    }
+}
 
 .bootstrap-datetimepicker-widget {
     top: 0;
