--- a/view/singin.html
+++ b/view/singin.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form-center-singin" role="form" ng-controller="SingInCtrl1">
+    <form class="form-center-singin" role="form" ng-controller="SingInCtrl">
         <h2>Авторизация</h2>
 
         <!--input name-->
