--- a/view/singin.html
+++ b/view/singin.html
@@ -5,20 +5,20 @@
         <!--input name-->
         <div class="form-group">
             <label for="inputEmail" class="sr-only">Email</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="" ng-model="formInfo.Name">
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
         </div>
 
         <!--input pass-->
         <div class="form-group">
             <label for="inputPassword" class="sr-only">Пароль</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required=""  ng-model="formInfo.Pass">
+            <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required="" >
         </div>
 
         <!--remember-->
         <div class="form-group">
             <div class="checkbox xs-btn-link">
                 <label>
-                    <input type="checkbox" value="remember-me" ng-model="formInfo.Remember"> Запомнить меня
+                    <input type="checkbox" value="remember-me"> Запомнить меня
                 </label>
                 <a href="" class="btn-link pull-right">Забыли пароль?</a>
                 <a href="" class="btn-link pull-right">Зарегистрироваться</a>
