--- a/view/singin.html
+++ b/view/singin.html
@@ -26,6 +26,6 @@
         </div>
 
         <!--SUBMIT-->
-        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="saveData()">Войти</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ">Войти</button>
     </form>
 </div>
