--- a/view/singin.html
+++ b/view/singin.html
@@ -1,31 +1,34 @@
 <div class="container">
-    <form class="form-center-singin" role="form" ng-controller="SingInCtrl">
-        <h2>Авторизация</h2>
+    <div class="row">
+        <form class="form-center-singin" role="form" ng-controller="SingInCtrl">
+            <h2>Авторизация</h2>
 
-        <!--input name-->
-        <div class="form-group">
-            <label for="inputEmail" class="sr-only">Email</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
-        </div>
-
-        <!--input pass-->
-        <div class="form-group">
-            <label for="inputPassword" class="sr-only">Пароль</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required="" >
-        </div>
-
-        <!--remember-->
-        <div class="form-group">
-            <div class="checkbox xs-btn-link">
-                <label>
-                    <input type="checkbox" value="remember-me"> Запомнить меня
-                </label>
-                <a href="" class="btn-link pull-right">Забыли пароль?</a>
-                <a href="" class="btn-link pull-right">Зарегистрироваться</a>
+            <!--input name-->
+            <div class="form-group">
+                <label for="inputEmail" class="sr-only">Email</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
             </div>
-        </div>
 
-        <!--SUBMIT-->
-        <button class="btn btn-lg btn-primary btn-block" type="submit" ">Войти</button>
-    </form>
+            <!--input pass-->
+            <div class="form-group">
+                <label for="inputPassword" class="sr-only">Пароль</label>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required="">
+            </div>
+
+            <!--remember-->
+            <div class="form-group">
+                <div class="checkbox xs-btn-link">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Запомнить меня
+                    </label>
+                    <a href="" class="btn-link pull-right">Забыли пароль?</a>
+                    <a href="" class="btn-link pull-right">Зарегистрироваться</a>
+                </div>
+            </div>
+
+            <!--SUBMIT-->
+            <button class="btn btn-lg btn-primary btn-block" type="submit"
+            ">Войти</button>
+        </form>
+    </div>
 </div>
