--- a/view/singup.html
+++ b/view/singup.html
@@ -9,7 +9,7 @@
                     <label for="first-name" class="control-label">Имя</label>
 
                     <div class="controls">
-                        <input id="first-name" name="first-name" type="text" placeholder="имя" class="input-xlarge" ng-model="formInfo.name">
+                        <input id="first-name" name="first-name" type="text" placeholder="имя" class="input-xlarge" required="" ng-model="formInfo.name">
 
                         <p class="help-block"></p>
                     </div>
