--- a/view/edit-profile.html
+++ b/view/edit-profile.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <form class="form-center-prof" ng-controller="ProfileCtrl">
+        <form class="form-center-prof">
             <fieldset>
                 <h2>Ваш профиль</h2>
 
