--- a/view/singup.html
+++ b/view/singup.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <form class="form-center-prof" ng-controller="SingUpCtrl">
+        <form class="form-center-prof">
             <fieldset>
                 <h2>Ваш профиль</h2>
 
@@ -9,20 +9,38 @@
                     <label for="first-name" class="control-label">Имя</label>
 
                     <div class="controls">
-                        <input id="first-name" name="first-name" type="text" placeholder="имя" class="input-xlarge" required="" ng-model="formInfo.name">
+                        <input id="first-name" name="first-name" type="text" placeholder="имя" class="input-xlarge"
+                               required="" ng-model="signup.name">
 
                         <p class="help-block"></p>
                     </div>
                 </div>
 
-                <!--фамилия-->
-                <div class="control-group">
-                    <label for="last-name" class="control-label">Фамилия</label>
+                <!--пароль-->
+                <div class="form-group">
+                    <label for="password" class="control-label">Пароль</label>
+                    <input id="password" type="password" class="form-control" name="password" placeholder="Password"
+                           ng-model="signup.password" required/>
+                    <small class="errorMessage"
+                           data-ng-show="signupForm.password.$dirty && signupForm.password.$invalid"> Enter
+                        Password.
+                    </small>
+                </div>
 
-                    <div class="controls">
-                        <input id="last-name" name="last-name" type="text" placeholder="фамилия" class="input-xlarge" ng-model="formInfo.lastname">
-                        <p class="help-block"></p>
-                    </div>
+                <!--подтверждение пароля -->
+                <div class="form-group">
+                    <label class="col-sm-5 control-label no-padding-right" for="password2">Повторите пароль</label>
+                    <input id="password2" type="password" class="form-control" name="password2"
+                           placeholder="Password Again"
+                           ng-model="signup.password2" password-match="signup.password" required/>
+                    <small class="errorMessage"
+                           data-ng-show="signupForm.password2.$dirty && signupForm.password2.$error.required">
+                        Enter password again.
+                    </small>
+                    <small class="errorMessage"
+                           data-ng-show="signupForm.password2.$dirty && signupForm.password2.$error.passwordNoMatch && !signupForm.password2.$error.required">
+                        Password do not match.
+                    </small>
                 </div>
 
                 <!--вес-->
@@ -30,7 +48,8 @@
                     <label for="weight" class="control-label">Вес</label>
 
                     <div class="controls">
-                        <input id="weight" type="number" class="input-xlarge" placeholder="вес" ng-model="formInfo.weight">
+                        <input id="weight" type="number" class="input-xlarge" placeholder="вес"
+                               ng-model="signup.weight">
 
                         <p class="help-block"></p>
                     </div>
@@ -39,8 +58,9 @@
                 <!--дата-->
                 <div class="control-group">
                     <label for="input-date" class="control-label">Дата рождения</label>
+
                     <div class="controls">
-                        <input id="input-date" type="date" class="input-xlarge" ng-model="formInfo.date">
+                        <input id="input-date" type="date" class="input-xlarge" ng-model="signup.date">
 
                         <p class="help-block"></p>
                     </div>
@@ -51,11 +71,12 @@
                     <label for="gender" class="control-label" for="gender">Пол</label>
 
                     <div class="controls">
-                        <select id="gender" name="selectbasic" class="input-xlarge" ng-model="formInfo.gender">
+                        <select id="gender" name="selectbasic" class="input-xlarge" ng-model="signup.gender">
                             <option value="" selected="selected">(выбрать)</option>
                             <option value="Мужчина">Мужчина</option>
                             <option value="Женщина">Женщина</option>
                         </select>
+
                         <p class="help-block"></p>
                     </div>
                 </div>
@@ -66,8 +87,9 @@
 
                     <div class="controls">
                         <select id="illness" class="input-xlarge">
-                            <option ng-repeat="ill in illness" value="{{ill.name}}" >{{ill.name}}</option>
+                            <option ng-repeat="ill in illness" value="{{ill.name}}" ng-model="signup.illness">{{ill.name}}</option>
                         </select>
+
                         <p class="help-block"></p>
                     </div>
                 </div>
@@ -78,18 +100,20 @@
                     <label for="weight-limit" class="control-label">Переносимость лимит</label>
 
                     <div class="controls">
-                        <input id="weight-limit" type="number" class="input-xlarge" placeholder="лимит в граммах" ng-model="formInfo.limit">
+                        <input id="weight-limit" type="number" class="input-xlarge" placeholder="лимит в граммах"
+                               ng-model="singup.limit">
 
                         <p class="help-block"></p>
                     </div>
                 </div>
 
-                <!-- отправить -->
+                <!-- submit -->
                 <div class="form-group">
                     <label for="singlebutton" class="col-md-4 control-label" for="singlebutton"></label>
 
                     <div class="col-md-12">
-                        <button id="singlebutton" name="singlebutton" class="btn btn-primary input-xlarge" ng-click="saveDate()">submit</button>
+                        <button id="singlebutton" name="singlebutton" class="btn btn-primary input-xlarge">submit
+                        </button>
                     </div>
                 </div>
             </fieldset>
