исправляю проблему с БД

--- a/view/login.html
+++ b/view/login.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <form class="form-center-singin" name="loginForm" role="form" ng-controller="SingInCtrl">
+        <form class="form-center-singin" name="loginForm" role="form">
             <h2 class="center">Авторизация</h2>
 
             <!--input name-->
